[package]
name = "pg-helper"
version = "0.1.0"
edition = "2021"
description = "Help to build PostgreSQL communication without complex ORM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
uuid = { version = "1.0", features = ["v4"]}
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
